[gd_scene load_steps=2 format=3 uid="uid://4xh7ofg8tp6l"]

[ext_resource type="Script" uid="uid://dx4uj8l1mcs8s" path="res://source/ui/templates/side_menu/side_menu.gd" id="1_m6aq1"]

[node name="SideMenu" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 151.0
grow_vertical = 2
script = ExtResource("1_m6aq1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GeneralLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "General Actions"
horizontal_alignment = 1

[node name="LeagueButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "View League"

[node name="TeamButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "View Team"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "Game Actions"
horizontal_alignment = 1

[node name="StrategyButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Strategy"

[node name="RollButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Roll"

[connection signal="pressed" from="PanelContainer/VBoxContainer/LeagueButton" to="." method="_on_league_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TeamButton" to="." method="_on_team_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/StrategyButton" to="." method="_on_strategy_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RollButton" to="." method="_on_roll_button_pressed"]
