extends Control


@onready var general_label: Label = %GeneralLabel
@onready var league_button: Button = %LeagueButton
@onready var team_button: Button = %TeamButton
@onready var game_label: Label = %GameLabel
@onready var strategy_button: Button = %StrategyButton
@onready var roll_button: Button = %RollButton


func _on_league_button_pressed() -> void:
	pass # Replace with function body.


func _on_team_button_pressed() -> void:
	pass # Replace with function body.


func _on_strategy_button_pressed() -> void:
	pass # Replace with function body.


func _on_roll_button_pressed() -> void:
	pass # Replace with function body.
